# cp-simple

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  pyproject.toml
configs/: config.yaml  eval_config.yaml
configs/augmentation/: lbm_copy_paste.yaml  normal.yaml  pctnet_copy_paste.yaml  simple_copy_paste.yaml
configs/dataset/: coco2017.yaml
configs/eval/: default.yaml
configs/model/: detr_baseline.yaml  detr_timm_efficientnet_b0.yaml  detr_timm_resnet18.yaml  dinov3_mask_rcnn.yaml  dinov3_mask_rcnn_base.yaml  maskrcnn_swin_t.yaml  yolo26m.yaml  yolo26n.yaml  yolo26s.yaml
configs/subset/: default.yaml
configs/train/: default.yaml  dinov3.yaml  maskrcnn.yaml
configs/train_premade/: dinov3_lbm_copy_paste.yaml  dinov3_none_online_normal.yaml  dinov3_pctnet_copy_paste.yaml  dinov3_simple_copy_paste.yaml  lbm_copy_paste.yaml  maskrcnn_lbm_copy_paste.yaml  maskrcnn_none_online_normal.yaml  maskrcnn_pctnet_copy_paste.yaml  maskrcnn_simple_copy_paste.yaml  none_online_normal.yaml  pctnet_copy_paste.yaml  simple_copy_paste.yaml
configs/wandb/: default.yaml
cps/: cli.py  config.py  paths.py
cps/analysis/: attention.py  plots.py  shortcuts.py
cps/augmentations/: __init__.py  base.py  lbm.py  libcom_backend.py  masks.py  normal.py  pctnet.py  previews.py  simple_copy_paste.py
cps/data/: coco.py  fixture.py  stats.py  subsets.py  visualization.py
cps/evaluation/: coco_metrics.py  comparisons.py  reports.py
cps/models/: __init__.py  detr.py  dinov3_mask_rcnn.py  mask_rcnn.py  yolo.py
cps/training/: checkpoints.py  fast_eval.py  losses.py  train.py  validate.py
cps/utils/: device.py  logging.py  seed.py  wandb.py
tests/: __init__.py  test_coco_resize.py  test_detr_masks.py  test_dinov3_mask_rcnn_config.py  test_fast_eval.py  test_libcom_model_download.py  test_mask_rcnn_config.py  test_premade_workers.py  test_training_dataloader_config.py  test_validation_loop.py  test_yolo_model.py
